# LEDE-CMake-pkg-template

./: README  README.md
HelloCMakeApp/: Makefile
HelloCMakeApp/src/: CMakeLists.txt  Hello.cpp  Hello.hpp  Main.cpp  Main.hpp  clean-bin-stuff.sh  clean-cmake-stuff.sh  clean.sh
HelloCMakeLibMM/: Makefile
HelloCMakeLibMM/src/: CMakeLists.txt  CMakeSources.txt  Canvas.cpp  Canvas.hpp  Layer.cpp  Layer.hpp  Screen.cpp  Screen.hpp  clean-backup-stuff.sh  clean-cmake-stuff.sh  clean-libs.sh  clean.sh
HelloCMakeLibMM/src/shared-lib/: CMakeLists.txt
HelloCMakeLibMM/src/static-lib/: CMakeLists.txt
